--- a/css/component2.css
+++ b/css/component2.css
@@ -1,10 +1,10 @@
 body {
-	background: #810606;
-	background: -moz-linear-gradient(top, #810606 0%, #810606 85%, #874d2b 85%, #874d2b 100%);
-	background: -webkit-linear-gradient(top, #810606 0%,#810606 85%,#874d2b 85%,#874d2b 100%);
-	background: -o-linear-gradient(top, #810606 0%,#810606 85%,#874d2b 85%,#874d2b 100%);
-	background: -ms-linear-gradient(top, #810606 0%,#810606 85%,#874d2b 85%,#874d2b 100%);
-	background: linear-gradient(to bottom, #810606 0%,#810606 85%,#874d2b 85%,#874d2b 100%);
+	background: #810606 url(../images/damask.jpg) 0px 0px;
+	background: -moz-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -webkit-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -o-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -ms-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
 }
 
 .no-js body {
@@ -105,9 +105,9 @@ body {
 .gr-gallery figcaption {
 	width: 80px;
 	display: block;
-	font-size: 5px;
-	background: #661414;
-	color: #fff;
+	font-size: 7px;
+	background: rgba(175, 90, 161, 0.788);
+	color: black;
 	padding: 10px;
 	margin-top: 20px;
 	position: relative;
@@ -138,7 +138,7 @@ body {
 
 .gr-gallery nav span {
 	width: 90px;
-	height: 100%;
+	height: 200%;
 	background: url(../images/steps.png);
 	float: left;
 	text-indent: -100%;
@@ -163,8 +163,8 @@ body {
 	left: 50%;
 	margin-left: -250px;
 	bottom: 0;
-	background: #fff;
-	box-shadow: 0 -1px 3px rgba(0,0,0,0.3);
+	background: rgb(189,0,255);
+	box-shadow: 0 -1px 3px rgba(214,0, 255);
 	-webkit-transform: translateY(310px);
 	-webkit-transition: -webkit-transform .5s ease;
 	-moz-transform: translateY(310px);
