--- a/css/component2.css
+++ b/css/component2.css
@@ -1,15 +1,15 @@
 body {
-	background: #f0f0f0;
-	background: -moz-linear-gradient(top, #f0f0f0 0%, #f0f0f0 85%, #3d3737 85%, #3d3737 100%);
-	background: -webkit-linear-gradient(top, #f0f0f0 0%,#f0f0f0 85%,#3d3737 85%,#3d3737 100%);
-	background: -o-linear-gradient(top, #f0f0f0 0%,#f0f0f0 85%,#3d3737 85%,#3d3737 100%);
-	background: -ms-linear-gradient(top, #f0f0f0 0%,#f0f0f0 85%,#3d3737 85%,#3d3737 100%);
-	background: linear-gradient(to bottom, #f0f0f0 0%,#f0f0f0 85%,#3d3737 85%,#3d3737 100%);
+	background: #810606 url(../images/damask.jpg) 0px 0px;
+	background: -moz-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -webkit-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -o-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: -ms-linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
+	background: linear-gradient(top, #810606 0%, #810606 0%, #874d2b 0%, #874d2b 0%);
 }
 
 .no-js body {
 	overflow: auto;
-	background: #f0f0f0;
+	background: #810606;
 }
 
 .js .gr-gallery {
@@ -39,7 +39,7 @@ body {
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	background: #f0f0f0 url(../images/wall.jpg) repeat 0px 0px;
+	background: #810606 url(../images/damask.jpg) 0px 0px;
 }
 
 .gr-wall-main {
@@ -52,7 +52,7 @@ body {
 	left: 0;
 	height: 30%;
 	width: 100%;
-	background: url(../images/floor.jpg) repeat 0px 0px;
+	background: #874d2b url(../images/floor2.jpg) repeat-x 0px 0px;
 }
 
 .gr-gallery figure {
@@ -73,10 +73,7 @@ body {
 	height: 150%;
 	top: -45%;
 	left: -40%;
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.7) 23%, rgba(255,255,255,0) 66%);
-	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.7) 23%, rgba(255,255,255,0) 66%);
-	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.7) 23%, rgba(255,255,255,0) 66%);
-	background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.7) 23%, rgba(255,255,255,0) 66%);
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.4) 23%, rgba(255,255,255,0) 66%);
 	pointer-events: none;
 	opacity: 0.5;
 }
@@ -91,29 +88,32 @@ body {
 
 .gr-gallery figure div {
 	position: relative;
-	border: 10px solid #000;
-	box-shadow: 0 10px 7px -5px rgba(0,0,0,0.3);
 }
 
 .gr-gallery figure img {
 	display: block;
 	margin: 0 auto;
-	border: 20px solid #fff;
+	border-style: solid;
+	border-width: 24px;
+	border-color: transparent;
+	-moz-border-image: url(../images/frame.jpg) 69 74 69 64 fill repeat;
+	-webkit-border-image: url(../images/frame.jpg) 69 69 70 66 repeat;
+	-o-border-image: url(../images/frame.jpg) 69 69 70 66 repeat;
+	border-image: url(../images/frame.jpg) 69 69 70 66 fill repeat;
 }
 
 .gr-gallery figcaption {
 	width: 80px;
 	display: block;
-	font-size: 5px;
-	background: #fff;
-	color: #444;
-	padding: 5px;
+	font-size: 7px;
+	background: rgba(175, 90, 161, 0.788);
+	color: black;
+	padding: 10px;
 	margin-top: 20px;
 	position: relative;
 	text-align: left;
 	cursor: -webkit-zoom-in; 
 	cursor: -moz-zoom-in;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 .gr-gallery figcaption h2 span {
@@ -138,7 +138,7 @@ body {
 
 .gr-gallery nav span {
 	width: 90px;
-	height: 100%;
+	height: 200%;
 	background: url(../images/steps.png);
 	float: left;
 	text-indent: -100%;
@@ -157,22 +157,20 @@ body {
 
 .gr-caption {
 	position: absolute;
-	width: 400px;
+	width: 500px;
 	height: 280px;
 	padding: 40px;
 	left: 50%;
-	margin-left: -200px;
+	margin-left: -250px;
 	bottom: 0;
-	background: #fff;
-	box-shadow: 0 -1px 3px rgba(0,0,0,0.3);
+	background: rgb(189,0,255);
+	box-shadow: 0 -1px 3px rgba(214,0, 255);
 	-webkit-transform: translateY(310px);
 	-webkit-transition: -webkit-transform .5s ease;
 	-moz-transform: translateY(310px);
 	-moz-transition: -moz-transform .5s ease;
 	-o-transform: translateY(310px);
 	-o-transition: -o-transform .5s ease;
-	-ms-transform: translateY(310px);
-	-ms-transition: -ms-transform .5s ease;
 	transform: translateY(310px);
 	transition: transform .5s ease;
 }
@@ -207,19 +205,35 @@ body {
 	border-bottom: 1px solid rgba(0,0,0,0.3);
 	padding: 0 0 10px 0;
 	margin: 0 0 20px 0;
-	font-family: 'Cutive Mono', cursive;
+	font-family: 'Alegreya SC', cursive;
+	font-weight: 700;
 }
 
-.gr-caption > div {
+.gr-caption-inner > div {
 	overflow: hidden;
 	overflow-y: auto;
 	max-height: 160px;
 }
 
-.gr-caption > div a {
+.gr-caption dl:before,
+.gr-caption dl:after  {
+	content: " ";
+	display: table;
+}
+
+.gr-caption dl:after {
+	clear: both;
+}
+
+.gr-caption dt {
 	font-weight: 700;
 }
 
-.gr-caption > div a:hover {
-	color: #d80066;
+.gr-caption dt, 
+.gr-caption dd { 
+	float: left;
+	width: 50%;
+	padding: 7px 0 0 0;
+	font-size: 13px;
+	text-transform: uppercase;
 }
