--- a/css/component2.css
+++ b/css/component2.css
@@ -57,7 +57,7 @@ body {
 
 .gr-gallery figure {
 	position: absolute;
-	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
 .no-js .gr-gallery figure {
